# renderTest

./: CMakeLists.txt  readme.md
include/glm/: common.hpp
include/glm/detail/: _features.hpp  type_quat.hpp  type_quat.inl  type_vec1.hpp  type_vec1.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_projection.hpp
include/glm/gtx/: dual_quaternion.hpp  dual_quaternion.inl  quaternion.inl
include/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
src/: Application.cpp  Application.h  Structs.h  main.cpp
src/assets/shaders/: fragment.glsl  vertex.glsl
src/components/: BaseComponent.cpp  BaseComponent.h
src/components/subcomponents/: TransformComponent.cpp  TransformComponent.h
src/modules/: GUI.cpp  GUI.h  GUI_Styles.cpp  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Util.cpp  Util.h
src/prefabs/: Primitives.h
src/prefabs/other/: Camera.cpp  Camera.h
src/prefabs/shapes/: Cube.cpp  Cube.h
